--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -481,6 +481,7 @@ guimainmemu_msg13 = FILIUS project-file
 guimainmemu_msg14 = Change to Documentation Mode
 guimainmemu_msg15 = Current Simulation Velocity
 guimainmemu_msg16 = Adjust Simulation Velocity
+guimainmemu_msg17 = Do you want to overwrite the existing file?
 
 infodialog_msg1 = Information
 infodialog_msg2 = <html><p><b>FILIUS</b> was developed as student project at the Universit&auml;t Siegen. (2006-2007)</p>
