--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -490,6 +490,7 @@ guimainmemu_msg13 = Fichier projet FILIUS
 guimainmemu_msg14 = Passer en mode documentation
 guimainmemu_msg15 = Vitesse de la simulation
 guimainmemu_msg16 = Ajuster la vitesse de simulation
+guimainmemu_msg17 = Voulez-vous replacer le fichier existant?
 
 infodialog_msg1 = Information
 infodialog_msg2 = <html><p><b>FILIUS</b> a &eacute;t&eacute; d&eacute;velopp&eacute; dans le cadre du projet d&#8217;un groupe d&#8217;&eacute;tudiants de l&#8217;universit&eacute; de Siegen. (2006-2007)</p>
