some minor spelling/wording issues in french translation

--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -458,7 +458,7 @@ dmtnfilechooser_msg11 = Dossier\u00a0:
 guicontainer_msg1 = S\u00e9lectionnez le nombre d\u2019interfaces du routeur.
 guicontainer_msg2 = Nombre d\u2019interfaces
 
-guievents_msg1 = Il n\u2019y a plus de connecteur disponible.
+guievents_msg1 = Il n\u2019y a plus de port disponible.
 guievents_msg2 = Modem
 guievents_msg3 = Afficher le bureau
 guievents_msg4 = Afficher les \u00e9changes de donn\u00e9es
@@ -478,7 +478,7 @@ guimainmemu_msg2 = Enregistrer (Ctrl+S)
 guimainmemu_msg3 = Passer en mode conception (Ctrl+D)
 guimainmemu_msg4 = Passer en mode simulation (Ctrl+R)
 guimainmemu_msg5 = Nouveau projet (Ctrl+N)
-guimainmemu_msg6 = D\u00e9marre l\u2019assistant logiciel (Ctrl+W)
+guimainmemu_msg6 = D\u00e9marrer l\u2019assistant logiciel (Ctrl+W)
 guimainmemu_msg7 = Afficher l\u2019aide (Ctrl+H)
 guimainmemu_msg8 = \u00c0 propos de FILIUS (Ctrl+A)
 guimainmemu_msg9 = Les derni\u00e8res modifications n\u2019ont pas \u00e9t\u00e9 sauvegard\u00e9es.\n\
