ensure that components may not be connected multiple times (based on a proposal by Patrice Treton)

--- a/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
@@ -462,6 +462,7 @@ guievents_msg8 = SAT Tabelle
 guievents_msg9 = MAC
 guievents_msg10 = Port
 guievents_msg11 = Konfigurieren
+guievents_msg12 = Komponenten bereits verbunden
 
 guihilfe_msg1 = Hilfe
 guihilfe_msg2 = <html><head></head><body><h1>Fehler</h1>Hilfedateien nicht gefunden..</body></html>
