--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -461,6 +461,7 @@ guievents_msg8 = SAT table
 guievents_msg9 = MAC
 guievents_msg10 = Port
 guievents_msg11 = Configure
+guievents_msg12 = Components already connected
 
 guihilfe_msg1 = Help
 guihilfe_msg2 = <html><head></head><body><h1>Error</h1>Helpfiles not found.</body></html>
