--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -469,6 +469,7 @@ guievents_msg8 = Table SAT
 guievents_msg9 = MAC
 guievents_msg10 = Port
 guievents_msg11 = Configurer
+guievents_msg12 = Une connexion avec ce composant existe déjà.
 
 guihilfe_msg1 = Aide
 guihilfe_msg2 = <html><head></head><body><h1>Erreur</h1>Fichiers d&#8217;aide introuvables.</body></html>
