editorial changes on help dialogs as well as new documentation help for German and English

--- a/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
@@ -733,6 +733,7 @@ rp_szenarioverwaltung_msg5 = Datei nicht gefunden oder fehlerhaft.
 
 hilfedatei_entwurf = design_mode_de_DE.html
 hilfedatei_simulation = simulation_mode_de_DE.html
+hilfedatei_documentation = documentation_mode_de_DE.html
 
 modemfirmware_msg1 = Zielrechner konnte nicht erreicht werden
 modemfirmware_msg2 = Fehler beim Verbindungsaufbau
