--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -731,6 +731,7 @@ rp_szenarioverwaltung_msg5 = File not found or corrupted.
 
 hilfedatei_entwurf = design_mode_en_GB.html
 hilfedatei_simulation = simulation_mode_en_GB.html
+hilfedatei_documentation = documentation_mode_en_GB.html
 
 modemfirmware_msg1 = Target could not be found.
 modemfirmware_msg2 = Error occurred during connecting.
