--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -740,6 +740,7 @@ rp_szenarioverwaltung_msg5 = Fichier introuvable ou corrompu.
 
 hilfedatei_entwurf = design_mode_fr_FR.html
 hilfedatei_simulation = simulation_mode_fr_FR.html
+hilfedatei_documentation = documentation_mode_fr_FR.html
 
 modemfirmware_msg1 = L\u2019ordinateur cible n\u2019a pas pu \u00eatre contact\u00e9
 modemfirmware_msg2 = Une erreur s\u2019est produite lors de l\u2019\u00e9tablissement de la connexion.
