i18n context menu documentation

--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -462,6 +462,15 @@ guievents_msg9 = MAC
 guievents_msg10 = Port
 guievents_msg11 = Configure
 guievents_msg12 = Components already connected
+guievents_msg13 = Colour
+guievents_msg14 = Font Style
+guievents_msg15 = Font Size
+guievents_msg16 = Normal
+guievents_msg17 = Large
+guievents_msg18 = Very Large
+guievents_msg19 = Normal
+guievents_msg20 = Italic
+guievents_msg21 = Bold
 
 guihilfe_msg1 = Help
 guihilfe_msg2 = <html><head></head><body><h1>Error</h1>Helpfiles not found.</body></html>
