--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -470,6 +470,15 @@ guievents_msg9 = MAC
 guievents_msg10 = Port
 guievents_msg11 = Configurer
 guievents_msg12 = Une connexion avec ce composant existe déjà.
+guievents_msg13 = Couleur
+guievents_msg14 = Style de police
+guievents_msg15 = Taille de police
+guievents_msg16 = Normal
+guievents_msg17 = Grande
+guievents_msg18 = Plus grande
+guievents_msg19 = Normal
+guievents_msg20 = Italique
+guievents_msg21 = Gras
 
 guihilfe_msg1 = Aide
 guihilfe_msg2 = <html><head></head><body><h1>Erreur</h1>Fichiers d&#8217;aide introuvables.</body></html>
