--- a/src/info/Changelog.txt
+++ b/src/info/Changelog.txt
@@ -1,3 +1,9 @@
+filius (1.10.2) unstable; urgency=low
+ * Fix bug when loading old project files with documentation elements
+ * Reduce corner radius of document elements
+ * Use secured URL (https)
+-- Stefan Freischlad <kontakt@lernsoftware-filius.de>  Wed, 29 July 2020 00:00:00 +0000
+
 filius (1.10.1) unstable; urgency=low
  * Silent Uninstall for Windows
  * Default install folder under Windows is now C:\Program Files\Filius
