--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -570,7 +570,7 @@ sw_firewall_msg3 = Connection request interrupted! (SYN = true)
 sw_firewall_msg4 = IP rule is added:
 sw_firewall_msg5 = Port rule is added:
 sw_firewall_msg6 = Delete IP rule:
-sw_firewall_msg7 = Delete port rule:
+sw_firewall_msg7 = Delete port rule.
 sw_firewall_msg8 = Firewall rule matched:
 sw_firewall_msg9 = No firewall rule matched. Using default policy:
 
