--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -579,7 +579,7 @@ sw_firewall_msg3 = Requ\u00eate d\u2019\u00e9tablissement de connexion interromp
 sw_firewall_msg4 = R\u00e8gle ajout\u00e9e sur IP\u00a0:
 sw_firewall_msg5 = R\u00e8gle ajout\u00e9e sur port\u00a0:
 sw_firewall_msg6 = R\u00e8gle supprim\u00e9e sur IP\u00a0:
-sw_firewall_msg7 = R\u00e8gle supprim\u00e9e sur port\u00a0:
+sw_firewall_msg7 = R\u00e8gle supprim\u00e9e sur port\u00a0.
 sw_firewall_msg8 = Une r\u00e8gle s\u2019applique\u00a0:
 sw_firewall_msg9 = Aucune r\u00e8gle n\u2019est satisfaite. Action par d\u00e9faut appliqu\u00e9e\u00a0:
 
