--- a/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
@@ -571,7 +571,7 @@ sw_firewall_msg3 = Anfrage Verbindungsaufbau unterbunden! (SYN = true)
 sw_firewall_msg4 = IP-Regel wurde hinzugef\u00fcgt:
 sw_firewall_msg5 = Portregel wurde hinzugef\u00fcgt:
 sw_firewall_msg6 = IP-Regel wurde entfernt:
-sw_firewall_msg7 = Portregel wurde entfernt:
+sw_firewall_msg7 = Portregel wurde entfernt.
 sw_firewall_msg8 = Firewall-Regel hat gegriffen:
 sw_firewall_msg9 = Keine Firewall-Regel hat gegriffen. Verwende Standardaktion:
 
