- re-factor firewall - add udp filter for personal firewall - minor bug fixes in router firewall - make rule table of personal firewall uneditable

--- a/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
@@ -164,7 +164,7 @@ fileimporter_msg8 = File-Importer Version 0.1
 
 firewall_msg1 = Firewall aktivieren
 firewall_msg2 = Die Firewall blockiert alle eingehenden IP-Pakete, wenn sie aktiviert wurde. Ausnahmen m\u00fcssen explizit angegeben werden. Regeln bestimmen TCP-/UDP-Ports, f\u00fcr die Daten zugelassen werden und ob die Ausnahme nur f\u00fcr alle Absender oder nur f\u00fcr Absender im lokalen Rechnernetz gilt.
-firewall_msg3 = Zul\u00e4ssiger Port:
+firewall_msg3 = Zul\u00e4ssiger Port/Protokoll:
 firewall_msg4 = Alle Absender
 firewall_msg5 = Absender im gleichen Rechnernetz
 firewall_msg6 = Hinzuf\u00fcgen
@@ -175,6 +175,7 @@ firewall_msg10 = Konfiguration
 firewall_msg11 = Log
 firewall_msg12 = Nur lokales Rechnernetz
 firewall_msg13 = Internet Control Message Protocol (Ping etc.) erlauben
+firewall_msg14 = Aktiviere UDP-Datenverkehrfilter
 
 firewallthread_msg1 = ICMP-Paket verworfen:
 
