--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -164,7 +164,7 @@ fileimporter_msg8 = File Importer Version 0.1
 
 firewall_msg1 = Activate firewall
 firewall_msg2 = The firewall blocks incoming IP packets, if it is activated. Exceptions must be declared. Rules define opened ports and whether they are opened for global or local sender.
-firewall_msg3 = Opened port:
+firewall_msg3 = Opened port/protocol:
 firewall_msg4 = All sender
 firewall_msg5 = Local sender
 firewall_msg6 = Add
@@ -175,6 +175,7 @@ firewall_msg10 = Setup
 firewall_msg11 = Log
 firewall_msg12 = Local network
 firewall_msg13 = Allow Internet Control Message Protocol (Ping etc.)
+firewall_msg14 = Activate UDP traffic filter
 
 firewallthread_msg1 = Dropped ICMP packet:
 
