--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -169,7 +169,7 @@ firewall_msg2 = Le parefeu bloque tous les paquets IP entrants, lorsqu\u2019il e
                 Les exceptions doivent \u00eatre donn\u00e9es explicitement. Les r\u00e8gles sp\u00e9cifient \
                 les ports  TCP/UDP qui doivent \u00eatre ouverts et pour quel type de source \
                 (poste du r\u00e9seau local ou tous les postes).
-firewall_msg3 = Port ouvert\u00a0:
+firewall_msg3 = Port/protocol ouvert\u00a0:
 firewall_msg4 = Tout le r\u00e9seau
 firewall_msg5 = R\u00e9seau local uniquement
 firewall_msg6 = Ajouter
@@ -180,6 +180,7 @@ firewall_msg10 = Configuration
 firewall_msg11 = Journal
 firewall_msg12 = R\u00e9seau local uniquement
 firewall_msg13 = Autoriser le protocole ICMP (Ping, etc.)
+firewall_msg14 = Activer le filtre pour UDP
 
 firewallthread_msg1 = Paquet ICMP rejet\u00e9\u00a0:
 
