003-several small improvements
- file explorer (double clicking opens a file, localization)
- imageviewer (bug fix and resize when image is larger than the frame)
- help files use a common css (only in french)
- desktop (resized to a real 640x480, reworked a couple of icons)
- JInternalFrames used for dialogs of virtual applications

--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -27,6 +27,10 @@ main_dlg_OPENTITLE = Open a project
 main_dlg_SAVETITLE = Save the project
 main_dlg_ALLFILES = All files
 main_dlg_WINNEWFOLDER = New folder
+main_dlg_MINIMIZE = Minimize
+main_dlg_MAXIMIZE = Maximize
+main_dlg_RESTORE = Restore
+main_dlg_CLOSE = Close
 
 splashscreen_msg1 = License: GNU General Public License version 2 or 3
 
@@ -172,6 +176,28 @@ fileexplorer_msg15 = Import file
 fileexplorer_msg16 = Select input and output file!
 fileexplorer_msg17 = Select folder!
 fileexplorer_msg18 = Sure?
+fileexplorer_msg19 = Type in the name of the new directory:
+fileexplorer_msg20 = The name can't be empty.
+fileexplorer_msg21 = This name is already in use.
+fileexplorer_msg22 = The following characters are not allowed:\n\\  |  /  "  :  ?  *  <  >
+fileexplorer_msg23 = New text file
+fileexplorer_msg24 = Type in the name of the text file to be created:
+fileexplorer_msg25 = Are you sure that you want to delete '
+fileexplorer_msg26 = '?
+fileexplorer_msg27 = All the files and subdirectories it contains will also be deleted.
+fileexplorer_msg28 = Type in the new name of the file:
+fileexplorer_msg29 = Refresh the display (F5)
+fileexplorer_msg30 = The selected file could not be imported.
+fileexplorer_msg31 = The file was not found.
+fileexplorer_msg32 = The file is too big.\nThe maximum size allowed is 150 KiB.
+fileexplorer_msg33 = B
+fileexplorer_msg34 = KiB
+fileexplorer_msg35 = Export the file
+fileexplorer_msg36 = Export
+fileexplorer_msg37 = Replace the existing file?
+fileexplorer_msg38 = Text files
+fileexplorer_msg39 = Html files
+fileexplorer_msg40 = Images files
 
 fileimporter_msg1 = Local file:
 fileimporter_msg2 = New name:
