--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -27,6 +27,10 @@ main_dlg_OPENTITLE = Ouvrir un projet
 main_dlg_SAVETITLE = Enregistrer le projet
 main_dlg_ALLFILES = Tous les fichiers
 main_dlg_WINNEWFOLDER = Nouveau dossier
+main_dlg_MINIMIZE = Réduire
+main_dlg_MAXIMIZE = Agrandir
+main_dlg_RESTORE = Restaurer
+main_dlg_CLOSE = Fermer
 
 splashscreen_msg1 = Licence\u00a0: GNU General Public License Version 2 ou 3
 
@@ -168,10 +172,32 @@ fileexplorer_msg11 = Dossier
 fileexplorer_msg12 = Importer un fichier
 fileexplorer_msg13 = Fichier local\u00a0:
 fileexplorer_msg14 = Parcourir
-fileexplorer_msg15 = Importer le fichier
+fileexplorer_msg15 = Importer
 fileexplorer_msg16 = Sélectionnez un fichier source et spécifiez un nom\u00a0!
 fileexplorer_msg17 = Sélectionnez un dossier\u00a0!
-fileexplorer_msg18 = En êtes-vous s\u00fbr\u00a0?
+fileexplorer_msg18 = En êtes-vous sûr\u00a0?
+fileexplorer_msg19 = Saisissez le nom du nouveau dossier :
+fileexplorer_msg20 = Le nom ne peut être vide.
+fileexplorer_msg21 = Ce nom est déjà utilisé.
+fileexplorer_msg22 = Les caratères suivants ne sont pas autorisés :\n\\  |  /  "  :  ?  *  <  >
+fileexplorer_msg23 = Nouveau fichier texte
+fileexplorer_msg24 = Saisissez le nom du fichier texte à créer :
+fileexplorer_msg25 = Êtes-vous sûr de vouloir supprimer '
+fileexplorer_msg26 = ' ?
+fileexplorer_msg27 = Tous les fichiers et sous-dossiers qu'il contient seront également supprimés.
+fileexplorer_msg28 = Saisissez le nouveau nom du fichier :
+fileexplorer_msg29 = Actualiser l\u2019affichage (F5)
+fileexplorer_msg30 = Le fichier sélectionné n\u2019a pas pu être importé.
+fileexplorer_msg31 = Le fichier est introuvable.
+fileexplorer_msg32 = Le fichier est trop grand.\nLa taille maximale autorisée est de 150 Kio.
+fileexplorer_msg33 = o
+fileexplorer_msg34 = Kio
+fileexplorer_msg35 = Exporter le fichier
+fileexplorer_msg36 = Exporter
+fileexplorer_msg37 = Voulez-vous remplacer le fichier existant ?
+fileexplorer_msg38 = Fichiers textes
+fileexplorer_msg39 = Fichiers html
+fileexplorer_msg40 = Fichiers images 
 
 fileimporter_msg1 = Fichier local\u00a0:
 fileimporter_msg2 = Nouveau nom\u00a0:
