--- a/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
@@ -751,3 +751,12 @@ modemfirmware_msg2 = Fehler beim Verbindungsaufbau
 jsidebar_tooltip_ipAddress = IP-Adresse(n)/Netzmaske (MAC)
 jsidebar_tooltip_gateway = Gateway
 jsidebar_tooltip_dnsServer = DNS-Server
+
+report_overview = Übersicht
+report_component_config = Komponenten
+report_base_config = Basiskonfiguration
+report_nics = Netzwerkschnittstellen
+report_apps = Anwendungen
+report_routing_table = Weiterleitungstabelle
+report_network_traffic = Datenaustausch
+report_title = Filius-Dokumentation
