--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -749,3 +749,12 @@ modemfirmware_msg2 = Error occurred during connecting.
 jsidebar_tooltip_ipAddress = IP address/netmask (MAC)
 jsidebar_tooltip_gateway = Gateway
 jsidebar_tooltip_dnsServer = DNS server
+
+report_overview = Overview
+report_component_config = Components
+report_base_config = Base Configuration
+report_nics = Network Interfaces
+report_apps = Applications
+report_routing_table = Routing/Forwarding Table
+report_network_traffic = Data Exchange
+report_title = Filius Documentation
