--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -758,3 +758,12 @@ modemfirmware_msg2 = Une erreur s\u2019est produite lors de l\u2019\u00e9tabliss
 jsidebar_tooltip_ipAddress = Adresse IP/masque (Adresse MAC)
 jsidebar_tooltip_gateway = Passerelle
 jsidebar_tooltip_dnsServer = Serveur DNS
+
+report_overview = Exposé sommaire
+report_component_config = Composants
+report_base_config = Configuration de base
+report_nics = Interfaces r\u00e9seau
+report_apps = Applications
+report_routing_table = Table de routage
+report_network_traffic = \u00c9changes de donn\u00e9es
+report_title = Documentation Filius
