add dns resource records to report

--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -758,3 +758,8 @@ report_apps = Applications
 report_routing_table = Routing/Forwarding Table
 report_network_traffic = Data Exchange
 report_title = Filius Documentation
+
+report_dns_rr = Configuration DNS Server
+report_domain = Domain Name
+report_type = Type
+report_data = Data
