--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -767,3 +767,8 @@ report_apps = Applications
 report_routing_table = Table de routage
 report_network_traffic = \u00c9changes de donn\u00e9es
 report_title = Documentation Filius
+
+report_dns_rr = Configuration Serveur DNS
+report_domain = Domaine
+report_type = Type
+report_data = Date
