--- a/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
@@ -760,3 +760,8 @@ report_apps = Anwendungen
 report_routing_table = Weiterleitungstabelle
 report_network_traffic = Datenaustausch
 report_title = Filius-Dokumentation
+
+report_dns_rr = Konfiguration DNS-Server
+report_domain = Domainname
+report_type = Typ
+report_data = Daten
