add application layer payload size in exchange dialog details

--- a/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
@@ -733,7 +733,7 @@ rp_lauscher_msg8 = Netzzugang
 rp_lauscher_msg9 = Vermittlung
 rp_lauscher_msg10 = Transport
 rp_lauscher_msg11 = Anwendung
-rp_lauscher_msg12 = Protokoll:
+rp_lauscher_msg12 = Protokoll
 rp_lauscher_msg13 = Suche nach MAC f\u00fcr
 
 rp_filiusclassloader_msg1 = Klasse
