--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -731,7 +731,7 @@ rp_lauscher_msg8 = Network
 rp_lauscher_msg9 = Internet
 rp_lauscher_msg10 = Transport
 rp_lauscher_msg11 = Application
-rp_lauscher_msg12 = Protocol:
+rp_lauscher_msg12 = Protocol
 rp_lauscher_msg13 = Search for MAC
 
 rp_filiusclassloader_msg1 = Class
