--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -740,7 +740,7 @@ rp_lauscher_msg8 = R\u00e9seau
 rp_lauscher_msg9 = Internet
 rp_lauscher_msg10 = Transport
 rp_lauscher_msg11 = Application
-rp_lauscher_msg12 = Protocole\u00a0:
+rp_lauscher_msg12 = Protocole\u00a0
 rp_lauscher_msg13 = Recherche de l\u2019adresse MAC associ\u00e9e \u00e0
 
 rp_filiusclassloader_msg1 = La classe
