add details to last column in "wireshark"

--- a/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
@@ -728,7 +728,7 @@ rp_lauscher_msg3 = Quelle
 rp_lauscher_msg4 = Ziel
 rp_lauscher_msg5 = Protokoll
 rp_lauscher_msg6 = Schicht
-rp_lauscher_msg7 = Bemerkungen
+rp_lauscher_msg7 = Bemerkungen / Details
 rp_lauscher_msg8 = Netzzugang
 rp_lauscher_msg9 = Vermittlung
 rp_lauscher_msg10 = Transport
