--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -726,7 +726,7 @@ rp_lauscher_msg3 = Source
 rp_lauscher_msg4 = Destination
 rp_lauscher_msg5 = Protocol
 rp_lauscher_msg6 = Layer
-rp_lauscher_msg7 = Comment
+rp_lauscher_msg7 = Comment / Details
 rp_lauscher_msg8 = Network
 rp_lauscher_msg9 = Internet
 rp_lauscher_msg10 = Transport
