--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -735,7 +735,7 @@ rp_lauscher_msg3 = Source
 rp_lauscher_msg4 = Destination
 rp_lauscher_msg5 = Protocole
 rp_lauscher_msg6 = Couche
-rp_lauscher_msg7 = Commentaire
+rp_lauscher_msg7 = Commentaire / Détail
 rp_lauscher_msg8 = R\u00e9seau
 rp_lauscher_msg9 = Internet
 rp_lauscher_msg10 = Transport
