allow ip forwarding deactivation

--- a/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
@@ -358,6 +358,7 @@ jhostkonfiguration_msg7 = DHCP zur Konfiguration verwenden
 jhostkonfiguration_msg8 = DHCP-Server einrichten
 jhostkonfiguration_msg9 = MAC-Adresse
 jhostkonfiguration_msg10 = IP-Adresse als Name verwenden
+jhostkonfiguration_msg11 = IP-Weiterleitung aktivieren
 
 jmodemkonfiguration_msg1 = Name
 jmodemkonfiguration_msg2 = Auf eingehende Verbindungsanfrage warten
