--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -356,7 +356,8 @@ jhostkonfiguration_msg6 = Domain Name Server
 jhostkonfiguration_msg7 = Use DHCP for configuration
 jhostkonfiguration_msg8 = DHCP server setup
 jhostkonfiguration_msg9 = MAC Address
-jhostkonfiguration_msg10 = Use IP address as Name
+jhostkonfiguration_msg10 = Use IP address as name
+jhostkonfiguration_msg11 = Activate IP forwarding
 
 jmodemkonfiguration_msg1 = Name
 jmodemkonfiguration_msg2 = Wait for incoming connection request
