--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -364,6 +364,7 @@ jhostkonfiguration_msg7 = Adressage automatique par serveur DHCP
 jhostkonfiguration_msg8 = Configuration du service DHCP
 jhostkonfiguration_msg9 = Adresse MAC
 jhostkonfiguration_msg10 = Utiliser l\u2019adresse IP comme nom
+jhostkonfiguration_msg11 = Activer routage des paquets
 
 jmodemkonfiguration_msg1 = Nom
 jmodemkonfiguration_msg2 = Attendre les connexions entrantes
