--- a/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
@@ -621,7 +621,7 @@ sw_terminal_msg22 = Ordner gewechselt!\n
 sw_terminal_msg23 = Test\n
 sw_terminal_msg24 = Erfolgreich erstellt!
 sw_terminal_msg25 = Liste verf\u00fcgbarer Befehle:\n \
-					arp           zeige Adresstabelle des "Address Resolution Protocol" (ARP) \n \
+					arp           zeige Adresstabelle des "Address Resolution Protocol" (ARP)\n \
 					cat / type    zeige Dateiinhalt an \n \
 					cd            Verzeichnis wechseln\n \
 					copy / cp     Datei kopieren\n \
@@ -637,8 +637,10 @@ sw_terminal_msg25 = Liste verf\u00fcgbarer Befehle:\n \
 					ping          teste Verbindung zu anderem Rechner\n \
 					pwd           gib Pfad des aktuellen Arbeitsverzeichnisses aus\n \
 					route         Routing-/Weiterleitungstabelle anzeigen\n \
+					tcpdump       Datenaustausch anzeigen\n \
 					touch         erstelle Datei\n \
 					traceroute    analysiere Stationen des \u00DCbertragungsweges \n
+sw_terminal_msg26 = Verwende den Befehl 'help' um Liste der verfügbaren Befehle anzuzeigen.
 sw_terminal_msg28 = hat die IP-Adresse
 sw_terminal_msg29 = Ung\u00fcltige Host-Angabe!\nNur korrekte URLs ohne Pfadangabe erlaubt.\n
 sw_terminal_msg30 = Hostname konnte nicht aufgel\u00f6st werden!\nEventuell ist kein DNS-Server verf\u00fcgbar.\n
@@ -666,6 +668,7 @@ sw_terminal_msg51 = \tAufruf: cat <Dateiname>\n\t        type <Dateiname>\n
 sw_terminal_msg52 = Zieladresse nicht erreichbar
 sw_terminal_msg53 = Ping zu Broadcast-Adressen wird nicht unterst\u00fctzt.
 sw_terminal_msg54 = Datei nicht vorhanden
+sw_terminal_msg55 = Beenden mit Strg+C
 
 
 sw_terminal_trace_msg1 = Benutzung:  traceroute <Ziel-Adresse> \n \
