--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -620,7 +620,7 @@ sw_terminal_msg22 = Folder changed!\n
 sw_terminal_msg23 = Test\n
 sw_terminal_msg24 = Successfully built!
 sw_terminal_msg25 = List of available commands:\n \
-                    arp           show Address Resolution Protocol (ARP) table \n \
+                    arp           show Address Resolution Protocol (ARP) table\n \
                     cat / type    show file contents \n \
 					cd            change directory\n \
 					copy / cp     copy file\n \
@@ -636,8 +636,10 @@ sw_terminal_msg25 = List of available commands:\n \
 					ping          test connection to other computer\n \
 					pwd           print working directory\n \
 					route         show routing table\n \
+					tcpdump       show data exchange\n \
 					touch         create file\n \
                     traceroute    analyse hops of connecting path \n
+sw_terminal_msg26 = Use command 'help' to show list of available commands.
 sw_terminal_msg28 = has the IP address
 sw_terminal_msg29 = Invalid host string!\nOnly correct URLs without paths are allowed.\n
 sw_terminal_msg30 = Hostname could not be resolved!\nPossibly no DNS server is available.\n
@@ -665,6 +667,7 @@ sw_terminal_msg51 = \tUsage: cat <Dateiname>\n\t       type <Dateiname>\n
 sw_terminal_msg52 = Destination not reachable
 sw_terminal_msg53 = Ping to Broadcast is not supported.
 sw_terminal_msg54 = No such file
+sw_terminal_msg55 = Cancel with Ctrl+C
 
 sw_terminal_trace_msg1 = Usage:  traceroute <target address> \n \
                     <target address> is an IP address or domain name.
