--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -629,24 +629,26 @@ sw_terminal_msg22 = Dossier modifi\u00e9!\n
 sw_terminal_msg23 = Test\n
 sw_terminal_msg24 = Cr\u00e9\u00e9 avec succ\u00e8s!
 sw_terminal_msg25 = Liste des commandes disponibles:\n \
-					help          affiche la liste des commandes disponibles\n \
-					touch         cr\u00e9e un fichier vide\n \
-					copy / cp     copie un fichier\n \
-					move / mv     d\u00e9place/renomme un fichier\n \
-          cat / type    affiche le contenu d\u2019un fichier \n \
-					del / rm      supprime une fichier ou un dossier\n \
-					mkdir         cr\u00e9e un dossier\n \
+                    arp           affiche la table (ARP) de r\u00e9solution d\u2019adresses\n \
 					cd            change le dossier courant\n \
-					pwd           affiche le chemin du dossier courant\n \
+					copy / cp     copie un fichier\n \
+                    cat / type    affiche le contenu d\u2019un fichier \n \
+					del / rm      supprime une fichier ou un dossier\n \
 					dir / ls      liste le contenu du dossier courant\n \
-					ipconfig      affiche les param\u00e8tres du r\u00e9seau\n \
-          netstat       affiche la liste des connexions en cours\n \
-          arp           affiche la table (ARP) de r\u00e9solution d\u2019adresses \n \
+					exit          quitte la ligne de commande\n \
+					help          affiche la liste des commandes disponibles\n \
 					host          r\u00e9sout un nom d\u2019h\u00f4te en adresse IP\n \
-					route         affiche la table de routage\n \
+					ipconfig      affiche les param\u00e8tres du r\u00e9seau\n \
+					mkdir         cr\u00e9e un dossier\n \
+					move / mv     d\u00e9place/renomme un fichier\n \
+                    netstat       affiche la liste des connexions en cours\n \
 					ping          teste la connexion avec un autre ordinateur\n \
-          traceroute    analyse les sauts n\u00e9cessaires pour atteindre une destination \n \
-					exit          quitte la ligne de commande\n
+					pwd           affiche le chemin du dossier courant\n \
+					route         affiche la table de routage\n \
+					tcpdump       affiche \u00c9changes de donn\u00e9es\n \
+					touch         cr\u00e9e un fichier vide\n \
+                    traceroute    analyse les sauts n\u00e9cessaires pour atteindre une destination\n
+sw_terminal_msg26 = Utilise la commande 'help' pour afficher la liste des commandes disponibles.
 sw_terminal_msg28 = a pour adresse IP
 sw_terminal_msg29 = Nom d\u2019h\u00f4te incorrect!\nSeuls les URLs sans chemin sont accept\u00e9s.\n
 sw_terminal_msg30 = Nom d\u2019h\u00f4te non r\u00e9solu.\nIl se peut qu\u2019aucun serveur DNS ne soit disponible.\n
@@ -674,6 +676,7 @@ sw_terminal_msg51 = \tUsage: cat <nom de fichier>\n\t       type <nom de fichier
 sw_terminal_msg52 = Destination inaccessible
 sw_terminal_msg53 = Ping non support\u00e9 sur les adresses de diffusion.
 sw_terminal_msg54 = Fichier n'existe pas
+sw_terminal_msg55 = Avorter avec Ctrl+C
 
 sw_terminal_trace_msg1 = Usage:  traceroute <destination> \n \
                     <destination> est une adresse IP ou un nom de domaine.
