provide command arpsend

--- a/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
@@ -622,6 +622,7 @@ sw_terminal_msg23 = Test\n
 sw_terminal_msg24 = Erfolgreich erstellt!
 sw_terminal_msg25 = Liste verf\u00fcgbarer Befehle:\n \
 					arp           zeige Adresstabelle des "Address Resolution Protocol" (ARP)\n \
+					arpsend       versende eine ARP-Antwort\n \
 					cat / type    zeige Dateiinhalt an \n \
 					cd            Verzeichnis wechseln\n \
 					copy / cp     Datei kopieren\n \
@@ -669,7 +670,10 @@ sw_terminal_msg52 = Zieladresse nicht erreichbar
 sw_terminal_msg53 = Ping zu Broadcast-Adressen wird nicht unterst\u00fctzt.
 sw_terminal_msg54 = Datei nicht vorhanden
 sw_terminal_msg55 = Beenden mit Strg+C
-
+sw_terminal_msg56 = Befehl zum Versenden einer ARP-Antwort\n \
+                      Aufruf: arpsend sender_ip target_ip\n \
+                        sender_ip - Zu veröffentlichende IP-Adresse zur eigenen MAC-Adresse\n \
+                        target_ip - IP-Adresse an die die Nachricht zu senden is
 
 sw_terminal_trace_msg1 = Benutzung:  traceroute <Ziel-Adresse> \n \
                     <Ziel-Adresse> ist eine IP-Adresse oder ein Domainname.
@@ -739,6 +743,7 @@ rp_lauscher_msg10 = Transport
 rp_lauscher_msg11 = Anwendung
 rp_lauscher_msg12 = Protokoll
 rp_lauscher_msg13 = Suche nach MAC f\u00fcr
+rp_lauscher_msg14 = MAC ist
 
 rp_filiusclassloader_msg1 = Klasse
 rp_filiusclassloader_msg2 = konnte nicht geladen werden.
