--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -630,6 +630,7 @@ sw_terminal_msg23 = Test\n
 sw_terminal_msg24 = Cr\u00e9\u00e9 avec succ\u00e8s!
 sw_terminal_msg25 = Liste des commandes disponibles:\n \
                     arp           affiche la table (ARP) de r\u00e9solution d\u2019adresses\n \
+                    arpsend       envoyer une r\u00e9ponse de l'ARP\n \
 					cd            change le dossier courant\n \
 					copy / cp     copie un fichier\n \
                     cat / type    affiche le contenu d\u2019un fichier \n \
@@ -677,8 +678,12 @@ sw_terminal_msg52 = Destination inaccessible
 sw_terminal_msg53 = Ping non support\u00e9 sur les adresses de diffusion.
 sw_terminal_msg54 = Fichier n'existe pas
 sw_terminal_msg55 = Avorter avec Ctrl+C
+sw_terminal_msg56 = Envoyer une r\u00e9ponse de l'ARP\n \
+                      Usage: arpsend sender_ip target_ip\n \
+                        sender_ip - l'adresse ip pour propre adresse MAC\n \
+                        target_ip - l'adresse IP du destinataire
 
-sw_terminal_trace_msg1 = Usage:  traceroute <destination> \n \
+sw_terminal_trace_msg1 = Usage: traceroute <destination> \n \
                     <destination> est une adresse IP ou un nom de domaine.
 sw_terminal_trace_msg2 = Erreur: impossible de se connecter au serveur DNS.
 sw_terminal_trace_msg3 = Erreur: le nom de domaine n\u2019a pas pu \u00eatre r\u00e9solu.
@@ -746,6 +751,7 @@ rp_lauscher_msg10 = Transport
 rp_lauscher_msg11 = Application
 rp_lauscher_msg12 = Protocole\u00a0
 rp_lauscher_msg13 = Recherche de l\u2019adresse MAC associ\u00e9e \u00e0
+rp_lauscher_msg14 = L\u2019adresse MAC est
 
 rp_filiusclassloader_msg1 = La classe
 rp_filiusclassloader_msg2 = n\u2019a pas pu \u00eatre charg\u00e9e.
