--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -621,6 +621,7 @@ sw_terminal_msg23 = Test\n
 sw_terminal_msg24 = Successfully built!
 sw_terminal_msg25 = List of available commands:\n \
                     arp           show Address Resolution Protocol (ARP) table\n \
+                    arpsend       send an ARP reply\n \
                     cat / type    show file contents \n \
 					cd            change directory\n \
 					copy / cp     copy file\n \
@@ -668,6 +669,10 @@ sw_terminal_msg52 = Destination not reachable
 sw_terminal_msg53 = Ping to Broadcast is not supported.
 sw_terminal_msg54 = No such file
 sw_terminal_msg55 = Cancel with Ctrl+C
+sw_terminal_msg56 = Command to send an ARP reply\n \
+                      Usage: arpsend sender_ip target_ip\n \
+                        sender_ip - address to be published for own MAC address\n \
+                        target_ip - target the reply must be sent to
 
 sw_terminal_trace_msg1 = Usage:  traceroute <target address> \n \
                     <target address> is an IP address or domain name.
@@ -737,6 +742,7 @@ rp_lauscher_msg10 = Transport
 rp_lauscher_msg11 = Application
 rp_lauscher_msg12 = Protocol
 rp_lauscher_msg13 = Search for MAC
+rp_lauscher_msg14 = MAC is
 
 rp_filiusclassloader_msg1 = Class
 rp_filiusclassloader_msg2 = could not be loaded.
