new start screen in terminal, fix display issues

--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -682,6 +682,21 @@ sw_terminal_msg56 = Envoyer une r\u00e9ponse de l'ARP\n \
                       Usage: arpsend sender_ip target_ip\n \
                         sender_ip - l'adresse ip pour propre adresse MAC\n \
                         target_ip - l'adresse IP du destinataire
+sw_terminal_msg57 = \n\n \
+\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ sSSs   .S  S.       .S   .S       S.     sSSs  \n \
+\ \ \ \ \ \ \ \ \ \ \ \ \ d%%SP  .SS  SS.     .SS  .SS       SS.   d%%SP   \n \
+\ \ \ \ \ \ \ \ \ \ \ \ \ d%S'    S%S  S%S     S%S  S%S       S%S  d%S'    \n \
+\ \ \ \ \ \ \ \ \ \ \ \ \ S%S     S%S  S%S     S%S  S%S       S%S  S%|     \n \
+\ \ \ \ \ \ \ \ \ \ \ \ \ S&S     S&S  S&S     S&S  S&S       S&S  S&S     \n \
+\ \ \ \ \ \ \ \ \ \ \ \ \ S&S_Ss  S&S  S&S     S&S  S&S       S&S  Y&Ss    \n \
+\ \ \ \ \ \ \ \ \ \ \ \ \ S&S~SP  S&S  S&S     S&S  S&S       S&S  `S&&S   \n \
+\ \ \ \ \ \ \ \ \ \ \ \ \ S&S     S&S  S&S     S&S  S&S       S&S    `S*S  \n \
+\ \ \ \ \ \ \ \ \ \ \ \ \ S*b     S*S  S*b     S*S  S*b       d*S     l*S  \n \
+\ \ \ \ \ \ \ \ \ \ \ \ \ S*S     S*S  S*S.    S*S  S*S.     .S*S    .S*P  \n \
+\ \ \ \ \ \ \ \ \ \ \ \ \ S*S     S*S   SSSbs  S*S   SSSbs_sdSSS   sSS*S   \n \
+\ \ \ \ \ \ \ \ \ \ \ \ \ S*S     S*S    YSSP  S*S    YSSP~YSSY    YSS'    \n \
+\ \ \ \ \ \ \ \ \ \ \ \ \ SP      SP           SP                          \n \
+\ \ \ \ \ \ \ \ \ \ \ \ \ Y       Y            Y                           \n\n
 
 sw_terminal_trace_msg1 = Usage: traceroute <destination> \n \
                     <destination> est une adresse IP ou un nom de domaine.
