--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -673,6 +673,21 @@ sw_terminal_msg56 = Command to send an ARP reply\n \
                       Usage: arpsend sender_ip target_ip\n \
                         sender_ip - address to be published for own MAC address\n \
                         target_ip - target the reply must be sent to
+sw_terminal_msg57 = \n\n \
+\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ sSSs   .S  S.       .S   .S       S.     sSSs  \n \
+\ \ \ \ \ \ \ \ \ \ \ \ \ d%%SP  .SS  SS.     .SS  .SS       SS.   d%%SP   \n \
+\ \ \ \ \ \ \ \ \ \ \ \ \ d%S'    S%S  S%S     S%S  S%S       S%S  d%S'    \n \
+\ \ \ \ \ \ \ \ \ \ \ \ \ S%S     S%S  S%S     S%S  S%S       S%S  S%|     \n \
+\ \ \ \ \ \ \ \ \ \ \ \ \ S&S     S&S  S&S     S&S  S&S       S&S  S&S     \n \
+\ \ \ \ \ \ \ \ \ \ \ \ \ S&S_Ss  S&S  S&S     S&S  S&S       S&S  Y&Ss    \n \
+\ \ \ \ \ \ \ \ \ \ \ \ \ S&S~SP  S&S  S&S     S&S  S&S       S&S  `S&&S   \n \
+\ \ \ \ \ \ \ \ \ \ \ \ \ S&S     S&S  S&S     S&S  S&S       S&S    `S*S  \n \
+\ \ \ \ \ \ \ \ \ \ \ \ \ S*b     S*S  S*b     S*S  S*b       d*S     l*S  \n \
+\ \ \ \ \ \ \ \ \ \ \ \ \ S*S     S*S  S*S.    S*S  S*S.     .S*S    .S*P  \n \
+\ \ \ \ \ \ \ \ \ \ \ \ \ S*S     S*S   SSSbs  S*S   SSSbs_sdSSS   sSS*S   \n \
+\ \ \ \ \ \ \ \ \ \ \ \ \ S*S     S*S    YSSP  S*S    YSSP~YSSY    YSS'    \n \
+\ \ \ \ \ \ \ \ \ \ \ \ \ SP      SP           SP                          \n \
+\ \ \ \ \ \ \ \ \ \ \ \ \ Y       Y            Y                           \n\n
 
 sw_terminal_trace_msg1 = Usage:  traceroute <target address> \n \
                     <target address> is an IP address or domain name.
