- fix bug for non-resolvable domain with recursive dns resolver - fix http request processing with query params in url - rename label for DNS A records from 'domain name' to 'host/domain name'

--- a/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
@@ -29,11 +29,11 @@ serverbaustein_msg3 = Starten
 dnsserver_msg1 = Starten
 dnsserver_msg2 = Adressen (A)
 dnsserver_msg3 = Mailaustausch (MX)
-dnsserver_msg4 = Domainname:
+dnsserver_msg4 = Host-/Domainname:
 dnsserver_msg5 = IP-Adresse:
 dnsserver_msg6 = Hinzuf\u00fcgen
 dnsserver_msg7 = Auswahl entfernen
-dnsserver_msg8 = Domainname
+dnsserver_msg8 = Host-/Domainname
 dnsserver_msg9 = IP-Adresse
 dnsserver_msg10 = Maildomain:
 dnsserver_msg11 = Domainname Mailserver:
@@ -671,9 +671,9 @@ sw_terminal_msg53 = Ping zu Broadcast-Adressen wird nicht unterst\u00fctzt.
 sw_terminal_msg54 = Datei nicht vorhanden
 sw_terminal_msg55 = Beenden mit Strg+C
 sw_terminal_msg56 = Befehl zum Versenden einer ARP-Antwort\n \
-                      Aufruf: arpsend sender_ip target_ip\n \
-                        sender_ip - Zu veröffentlichende IP-Adresse zur eigenen MAC-Adresse\n \
-                        target_ip - IP-Adresse an die die Nachricht zu senden is
+                      \ Aufruf: arpsend sender_ip target_ip\n \
+                      \ \ \ sender_ip - Zu veröffentlichende IP-Adresse zur eigenen MAC-Adresse\n \
+                      \ \ \ target_ip - IP-Adresse an die die Nachricht zu senden ist
 sw_terminal_msg57 = \n\n \
 \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ sSSs   .S  S.       .S   .S       S.     sSSs  \n \
 \ \ \ \ \ \ \ \ \ \ \ \ \ d%%SP  .SS  SS.     .SS  .SS       SS.   d%%SP   \n \
