--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -29,11 +29,11 @@ serverbaustein_msg3 = Start
 dnsserver_msg1 = Start
 dnsserver_msg2 = Address (A)
 dnsserver_msg3 = Mail exchange (MX)
-dnsserver_msg4 = Domain name:
+dnsserver_msg4 = Host/domain name:
 dnsserver_msg5 = IP address:
 dnsserver_msg6 = Add
 dnsserver_msg7 = Remove entry
-dnsserver_msg8 = Domain name
+dnsserver_msg8 = Host/domain name
 dnsserver_msg9 = IP address
 dnsserver_msg10 = Mail domain:
 dnsserver_msg11 = Mail server domain name:
