--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -31,11 +31,11 @@ serverbaustein_msg3 = D\u00e9marrer
 dnsserver_msg1 = D\u00e9marrer
 dnsserver_msg2 = Adresse (A)
 dnsserver_msg3 = \u00c9change de messages (MX)
-dnsserver_msg4 = Nom de domaine\u00a0:
+dnsserver_msg4 = Nom d\u2019h\u00f4te / de domaine\u00a0:
 dnsserver_msg5 = Adresse IP\u00a0:
 dnsserver_msg6 = Ajouter
 dnsserver_msg7 = Supprimer la s\u00e9lection
-dnsserver_msg8 = Nom de domaine
+dnsserver_msg8 = Nom d\u2019h\u00f4te / de domaine
 dnsserver_msg9 = Adresse IP
 dnsserver_msg10 = Domaine de messagerie\u00a0:
 dnsserver_msg11 = Nom DNS du serveur\u00a0:
