fix handling cut/copy and paste in file explorer

--- a/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
@@ -152,6 +152,7 @@ fileexplorer_msg15 = Datei importieren
 fileexplorer_msg16 = Eingabe- und Ausgabedatei m\u00FCssen angegeben werden!
 fileexplorer_msg17 = Es muss ein Ordner ausgew\u00E4hlt werden!
 fileexplorer_msg18 = Sicher?
+fileexplorer_msg19 = Unzulässiger Zielordner!
 
 fileimporter_msg1 = Lokale Datei:
 fileimporter_msg2 = Neuer Name:
