--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -152,6 +152,7 @@ fileexplorer_msg15 = Import file
 fileexplorer_msg16 = Select input and output file!
 fileexplorer_msg17 = Select folder!
 fileexplorer_msg18 = Sure?
+fileexplorer_msg19 = Invalid target folder!
 
 fileimporter_msg1 = Local file:
 fileimporter_msg2 = New name:
