--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -154,6 +154,7 @@ fileexplorer_msg15 = Importer le fichier
 fileexplorer_msg16 = S\u00e9lectionnez un fichier source et sp\u00e9cifiez un nom\u00a0!
 fileexplorer_msg17 = S\u00e9lectionnez un dossier\u00a0!
 fileexplorer_msg18 = En \u00eates-vous s\u00fbr\u00a0?
+fileexplorer_msg19 = Dossier de destination invalide!
 
 fileimporter_msg1 = Fichier local\u00a0:
 fileimporter_msg2 = Nouveau nom\u00a0:
